--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="Your database url for frontend"
+DATABASE_URL="postgresql://<username>:<password>@<host>:<port>/<database>"
 JWT_SECRET="Your RS256 key from your realm in keycloak"
 KEYCLOAK_URL="Your Keycloak URL"
 KEYCLOAK_REALM="Your Realm"
